# PHILAB

./: .env.example  .gitignore  AGENTS.md  CODEX_PROMPT_distributed_platform.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_RUNS.md  Codex_20251219T191749Z_summary.md  Codex_Audit_Summary_2025-12-21_GPT-5.2.md  Dockerfile  PEWPEW_HANDOFF.md  README-INSTALL.md  README.md  RUNBOOK_RAILWAY_RELEASE.md  Release_Handoff_2025-12-21_GPT-5.2.md  TODO_enterprise_20251219T0630Z.md  alembic.ini  capture_real_telemetry.py  codex_log_20251219T1317Z.md  codex_report_2025-12-18T2025Z.md  codex_summary_20251219T0630Z.md  enable-phi2.sh  handoffDEC_18_0213pm.md  install.sh  railway.json  railway.toml
deploy/: .env.example  (+14 more)
phi2_lab/: README.md  pyproject.toml
phi2_lab/atlas/: __init__.py  ingest.py  query.py  storage.py
phi2_lab/atlas/schema/: __init__.py
phi2_lab/atlas/structure/: phi2_architecture.md  phi2_geometry.md
phi2_lab/auth/: API_ACCESS.md  __init__.py  api_keys.py
phi2_lab/config/: agents.yaml  app.yaml  codebook.yaml  lenses.yaml  presets.yaml
phi2_lab/config/environments/: development.yaml  production.yaml  staging.yaml
phi2_lab/config/experiments/: epistemology_probe.yaml  head_ablation.yaml  head_ablation_comprehensive.yaml  head_ablation_extended.yaml  head_ablation_full_scan.yaml  semantic_relations_probe.yaml  semantic_relations_sanity.yaml  test_hook_template.yaml  test_probe_template.yaml
phi2_lab/data/: ablation_dataset_extended.jsonl  epistemology_true_false.jsonl  head_ablation_demo.jsonl
phi2_lab/docs/architecture/: phi2_reference.md
phi2_lab/experiments/geometry/: __init__.py  analysis.py  plots.py  run_probes.py  simulation.py
phi2_lab/geometry_viz/: __init__.py  api.py  integration.py  mock_data.py  recorder.py  residual_metadata.py  residual_sampling.py  residuals.py  schema.py  telemetry_store.py
phi2_lab/geometry_viz/static/: app.js  app2.js  bootstrap.js  index.html  styles.css  tasks.js
phi2_lab/models/phi2/: __init__.py  architecture.py
phi2_lab/notebooks/interpretability/: phi2_layer_sensitivity.ipynb
phi2_lab/orchestration/: __init__.py  runner.py
phi2_lab/orchestration/agents/: __init__.py  roles.py
phi2_lab/phi2_agents/: README_AI_PROVIDER.md  __init__.py  adapter_agent.py  ai_provider_service.py  architect_agent.py  atlas_agent.py  base_agent.py  compression_agent.py  experiment_agent.py  orchestrator.py
phi2_lab/phi2_atlas/: MIGRATIONS.md  README.md  __init__.py  codebook.py  query.py  schema.py  service.py  storage.py  writer.py
phi2_lab/phi2_context/: codebook.py  compressor.py  context_builder.py  retriever.py
phi2_lab/phi2_core/: ablation.py  adapter_manager.py  config.py  health.py  hooks.py  model_manager.py
phi2_lab/phi2_experiments/: __init__.py  datasets.py  geometry.py  hooks.py  metrics.py  probes.py  runner.py  spec.py
phi2_lab/phi2_lab.egg-info/: PKG-INFO  requires.txt  top_level.txt
phi2_lab/platform/: __init__.py  api.py  audit.py  auth.py  config.py  database.py  datasets.py  dependencies.py  errors.py  leaderboard.py  limits.py  mock_data.py  models.py  rate_limit.py  result_processor.py  schemas.py  task_queue.py
phi2_lab/platform/migrations/: env.py
phi2_lab/platform/routes/: __init__.py  admin.py  contributors.py  datasets.py  findings.py  geometry.py  results.py  stats.py  tasks.py
phi2_lab/platform/services/: __init__.py  admin.py  contributors.py  datasets.py  findings.py  geometry.py  results.py  stats.py  tasks.py
phi2_lab/resources/: __init__.py  wordnet_relations.json
phi2_lab/scripts/: atlas_query.py  batch_tag_atlas.py  bootstrap_phi2.py  build_adapter_manifest.py  build_atlas_snapshot.py  build_wordnet_relations.py  check_geometry_telemetry.py  compare_geometry_runs.py  fetch_phi2_weights.py  generate_hook_spec.py  geometry_healthcheck.py  geometry_to_telemetry.py  ingest_geometry_telemetry.py  milestone1_demo.py  milestone3_atlas.py  milestone7_orchestrator.py  philab_contribute.py  platform_admin_cli.py  register_adapter_checkpoints.py  run_demo.py  run_experiment.py  run_telemetry_suite.py  seed_platform_demo.py  self_check.py  serve_atlas_ui.py  serve_geometry_dashboard.py  setup_env.ps1  setup_env.sh  validate_adapters.py  validate_dataset_releases.py
phi2_lab/utils/: __init__.py  audit.py  cors.py  schema_validation.py  serialization.py  validation.py
(+31 files in other folders)
