[project]
name = "phi2-lab"
version = "1.0.0"
description = "Enterprise-ready multi-agent AI interpretability lab for Microsoft Phi-2"
authors = [
    {name = "E-TECH-PLAYTECH", email = "contact@e-tech-playtech.com"}
]
maintainers = [
    {name = "E-TECH-PLAYTECH", email = "contact@e-tech-playtech.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "phi-2",
    "interpretability",
    "ai",
    "machine-learning",
    "transformers",
    "multi-agent",
    "pytorch",
]

dependencies = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pylint>=2.17.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pre-commit>=3.3.0",
    "ipython>=8.14.0",
    "types-PyYAML>=6.0.0",
]

platform = [
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

all = [
    "phi2-lab[dev,docs,platform,adapters]",
]

adapters = [
    "peft>=0.9.0",
    "accelerate>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/E-TECH-PLAYTECH/PHILAB"
Documentation = "https://github.com/E-TECH-PLAYTECH/PHILAB/tree/main/docs"
Repository = "https://github.com/E-TECH-PLAYTECH/PHILAB"
Issues = "https://github.com/E-TECH-PLAYTECH/PHILAB/issues"
Changelog = "https://github.com/E-TECH-PLAYTECH/PHILAB/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["phi2_lab"]

[tool.setuptools.package-data]
phi2_lab = [
    "config/*.yaml",
    "config/**/*.yaml",
    "resources/*.json",
    "py.typed",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/venv/*", "*/env/*", "*/.venv/*"]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

# pylint configuration
[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

# bandit configuration
[tool.bandit]
exclude_dirs = ["/tests", "/venv", "/env", "/.venv"]
skips = ["B101", "B601"]

# pytest configuration (additional settings)
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

# coverage configuration (additional settings)
[tool.coverage.run]
source = ["phi2_lab"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 70
